k8s/6-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-db
spec:
  selector:
    matchLabels:
      app: user-service-db
  template:
    metadata:
      labels:
        app: user-service-db
    spec:
      containers:
        - name: user-service-db
          image: mysql:latest
          ports:
            - containerPort: 3311
          volumeMounts:
            - mountPath: /data/db
              name: user-service-db-volume
      volumes:
        - name: user-service-db-volume
          hostPath:
            path: /user-service-db-volume
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-db
spec:
  selector:
    matchLabels:
      app: catalog-service-db
  template:
    metadata:
      labels:
        app: catalog-service-db
    spec:
      containers:
        - name: catalog-service-db
          image: mysql:latest
          ports:
            - containerPort: 3312
          volumeMounts:
            - mountPath: /data/db
              name: catalog-service-db-volume
      volumes:
        - name: catalog-service-db-volume
          hostPath:
            path: /catalog-service-db-volume
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-service-db
spec:
  selector:
    matchLabels:
      app: pay-service-db
  template:
    metadata:
      labels:
        app: pay-service-db
    spec:
      containers:
        - name: pay-service-db
          image: mysql:latest
          ports:
            - containerPort: 3313
          volumeMounts:
            - mountPath: /data/db
              name: pay-service-db-volume
      volumes:
        - name: pay-service-db-volume
          hostPath:
            path: /pay-service-db-volume
            type: DirectoryOrCreate
