k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
spec:
  rules:
  - host: musify
    http:
      paths:
      - path: /user
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 1111
      - path: /catalog
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalog-service
            port:
              number: 2222
      - path: /payment
        pathType: ImplementationSpecific
        backend:
          service:
            name: pay-service
            port:
              number: 3333
